--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ packaging==16.8
 paramiko==2.1.2
 pbr==3.0.0
 Pillow==4.1.0
+psycopg2==2.7.1
 pyasn1==0.2.3
 pycparser==2.17
 pyparsing==2.2.0
@@ -25,6 +26,7 @@ pytz==2017.2
 PyWavelets==0.5.2
 scikit-image==0.13.0
 scipy==0.19.0
+simplejson==3.10.0
 six==1.10.0
 SQLAlchemy==1.1.9
 sqlalchemy-migrate==0.11.0
