--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ functools32==3.2.3.post2
 idna==2.5
 ipaddress==1.0.18
 Lasagne==0.1
+Mako==1.0.6
+MarkupSafe==1.0
 matplotlib==2.0.0
 networkx==1.11
 numpy==1.12.1
@@ -22,12 +24,13 @@ pyasn1==0.2.3
 pycparser==2.17
 pyparsing==2.2.0
 python-dateutil==2.6.0
+python-editor==1.0.3
 pytz==2017.2
 PyWavelets==0.5.2
 scikit-image==0.13.0
 scipy==0.19.0
-simplejson==3.10.0
 six==1.10.0
+sobol-seq==0.1.2
 SQLAlchemy==1.1.9
 sqlalchemy-migrate==0.11.0
 sqlparse==0.2.3
