--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,58 @@
 appdirs==1.4.3
+appnope==0.1.0
 asn1crypto==0.22.0
+backports-abc==0.5
+backports.shutil-get-terminal-size==1.0.0
+certifi==2017.4.17
 cffi==1.10.0
 cryptography==1.8.1
 cycler==0.10.0
+Cython==0.25.2
 decorator==4.0.11
 enum34==1.1.6
 functools32==3.2.3.post2
 idna==2.5
 ipaddress==1.0.18
-Lasagne==0.2.dev1
+ipykernel==4.6.1
+ipython==5.3.0
+ipython-genutils==0.2.0
+jupyter-client==5.0.1
+jupyter-core==4.3.0
+Lasagne==0.1
+Mako==1.0.6
+MarkupSafe==1.0
 matplotlib==2.0.0
 networkx==1.11
 numpy==1.12.1
 olefile==0.44
 packaging==16.8
 paramiko==2.1.2
+pathlib2==2.2.1
 pbr==3.0.0
+pexpect==4.2.1
+pickleshare==0.7.4
 Pillow==4.1.0
+prompt-toolkit==1.0.14
 psycopg2==2.7.1
+ptyprocess==0.5.1
+py==1.4.33
 pyasn1==0.2.3
 pycparser==2.17
+Pygments==2.2.0
+pygpu==0.6.5
 pyparsing==2.2.0
+pytest==3.1.0
 python-dateutil==2.6.0
+pytools==2017.1.1
 pytz==2017.2
 PyWavelets==0.5.2
+pyzmq==16.0.2
+scandir==1.5
 scikit-image==0.13.0
 scipy==0.19.0
+simplegeneric==0.8.1
 simplejson==3.10.0
+singledispatch==3.4.0.3
 six==1.10.0
 sobol==0.9
 sobol-seq==0.1.2
@@ -36,4 +62,7 @@ sqlparse==0.2.3
 subprocess32==3.2.7
 Tempita==0.5.2
 Theano==0.9.0
+tornado==4.5.1
 tqdm==4.11.2
+traitlets==4.3.2
+wcwidth==0.1.7
